testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket_or_hexadecimal/case12.expect.out
error: expected '}' or hexadecimal digit in unicode escape, found '"'
  ==> case12.cj:15:19:
   | 
15 | cangjie 1 \u{12342""""""
   |           ~~      ^ expected '}' or hexadecimal digit
   |           |
   |           because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

error: expected '}' or hexadecimal digit in unicode escape, found '"'
  ==> case12.cj:16:16:
   | 
16 | cangjie2 \u{123"""
   |          ~~    ^ expected '}' or hexadecimal digit
   |          |
   |          because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

2 errors generated, 2 errors printed.
